--- a/index.html
+++ b/index.html
@@ -14,16 +14,35 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <section>
+    <section id="main">
       <h1 class="ir">나와 어울리는 술은?</h1>
-      <div class="imgMain col-lg-4 col-md-8 col-sm-10 col-12 mx-auto my-2">
+      <div
+        class="imgMain col-lg-4 col-md-8 col-sm-10 col-12 mx-auto my-2"
+        onclick="js:begin()"
+      >
         <img src="./img/main.png" alt="술BTI" class="img-fluid" />
       </div>
+    </section>
+    <section id="qna">
+      <div class="status">
+        <div class="statusBar">상태바</div>
+      </div>
+      <div class="qnaBox">질문</div>
+      <div class="answerBox">대답</div>
+    </section>
+    <section id="result">
+      <h1>당신의 결과는??</h1>
+      <div class="resultname"></div>
+      <div id="resultImg"></div>
+      <div class="resultDesc"></div>
+      <button type="button">공유하기</button>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/data.js" charset="utf-8"></script>
+    <script src="./js/start.js" charset="utf-8"></script>
   </body>
 </html>
