style: 질답 페이지 스타일 추가

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     </section>
     <section id="qna">
       <div class="status">
-        <div class="statusBar">상태바</div>
+        <div class="statusBar"></div>
       </div>
-      <div class="qnaBox">질문</div>
-      <div class="answerBox">대답</div>
+      <div class="qnaBox text-center"></div>
+      <div
+        class="answerBox d-flex flex-column col-lg-8 col-md-8 col-sm-10 col-12 mx-auto"
+      ></div>
     </section>
     <section id="result">
       <h1>당신의 결과는??</h1>
