--- a/index copy.html
+++ b/index copy.html
@@ -24,28 +24,21 @@
       </div>
     </section>
     <section id="qna">
-      <h1>
-        <img
-          src="./img/logo.png
-            "
-          alt=""
-          class="imgLogo"
-        />
-      </h1>
-      <div class="status">
-        <div class="statusBar"></div>
+      <div class="status mx-auto mt-5">
+        <div class="statusBar">상태바</div>
       </div>
-      <div class="qnaBox text-center"></div>
-      <div
-        class="answerBox d-flex flex-column col-lg-8 col-md-8 col-sm-10 col-12 mx-auto"
-      ></div>
+      <div class="qnaBox my-5 py-3 mx-auto">질문</div>
+      <div class="answerBox">대답</div>
     </section>
-    <section id="result">
+    <section id="result" class="mx-auto my-5 py-5 px-3">
       <h1>당신의 결과는??</h1>
       <div class="resultname"></div>
-      <div id="resultImg"></div>
+      <div
+        id="resultImg"
+        class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto"
+      ></div>
       <div class="resultDesc"></div>
-      <button type="button">공유하기</button>
+      <button type="button" class="kakao mt-3 py-2 px-3">공유하기</button>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
