style: 결과 페이지 로고 삽입

--- a/index.html
+++ b/index.html
@@ -41,10 +41,20 @@
       ></div>
     </section>
     <section id="result">
-      <h1>당신의 결과는??</h1>
-      <div class="resultname"></div>
-      <div id="resultImg"></div>
-      <div class="resultDesc"></div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-8 mx-auto">
+        <img
+          src="./img/logo.png
+                  "
+          alt=""
+          class="imgLogo"
+        />
+      </div>
+      <div class="resultCont">
+        <h1 class="ir">당신의 결과는??</h1>
+        <div id="resultImg" class="imgResult"></div>
+        <div class="resultName"></div>
+        <ul class="resultDesc"></ul>
+      </div>
       <button type="button">공유하기</button>
     </section>
     <script
