feat: 잘 맞는 타입, 안맞는 타입 추가

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         <div id="resultImg" class="imgResult"></div>
         <div class="resultName"></div>
         <ul class="resultDesc"></ul>
+        <div class="chemi">
+          <div class="bestType">
+            <p class="fs-3">잘 맞는 유형</p>
+            <div class="best"></div>
+          </div>
+          <div class="badType">
+            <p class="fs-3">잘 안맞는 유형</p>
+            <div class="bad"></div>
+          </div>
+        </div>
       </div>
       <button type="button">공유하기</button>
     </section>
