--- a/index.html
+++ b/index.html
@@ -4,74 +4,55 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>술 BTI</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <section id="main">
       <h1 class="ir">나와 어울리는 술은?</h1>
-      <div
-        class="imgMain col-lg-4 col-md-8 col-sm-10 col-12 mx-auto my-2"
-        onclick="js:begin()"
-      >
-        <img src="./img/main.png" alt="술BTI" class="img-fluid" />
+      <div class="imgContainer">
+        <img src="./img/main.png" alt="술BTI" class="imgMain" />
       </div>
+      <button class="btnStart" onclick="js:begin()">
+        <img src="./img/btn-start.png" alt="" class="btnStartImg" />
+      </button>
     </section>
     <section id="qna">
-      <h1>
-        <img
-          src="./img/logo.png
+      <img
+        src="./img/logo.png
             "
-          alt=""
-          class="imgLogo"
-        />
-      </h1>
+        alt=""
+        class="imgLogo"
+      />
       <div class="status">
         <div class="statusBar"></div>
       </div>
-      <div class="qnaBox text-center"></div>
-      <div
-        class="answerBox d-flex flex-column col-lg-8 col-md-8 col-sm-10 col-12 mx-auto"
-      ></div>
+      <h2 class="qnaBox"></h2>
+      <div class="answerBox"></div>
     </section>
     <section id="result">
-      <div class="col-lg-3 col-md-4 col-sm-6 col-8 mx-auto">
-        <img
-          src="./img/logo.png
-                  "
-          alt=""
-          class="imgLogo"
-        />
-      </div>
+      <img
+        src="./img/logo.png
+                "
+        alt=""
+        class="imgLogo"
+      />
       <div class="resultCont">
         <h1 class="ir">당신의 결과는??</h1>
         <div id="resultImg" class="imgResult"></div>
         <div class="resultName"></div>
         <ul class="resultDesc"></ul>
         <div class="chemi">
-          <div class="bestType">
-            <p class="fs-3">잘 맞는 유형</p>
-            <div class="best"></div>
+          <div class="type best">
+            <p class="typeResult">베스트 술친구</p>
           </div>
-          <div class="badType">
-            <p class="fs-3">잘 안맞는 유형</p>
-            <div class="bad"></div>
+          <div class="type bad">
+            <p class="typeResult">워스트 술친구</p>
           </div>
         </div>
       </div>
       <button type="button">공유하기</button>
     </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
     <script src="./js/data.js" charset="utf-8"></script>
     <script src="./js/start.js" charset="utf-8"></script>
   </body>
