style: 시작하기 버튼 타이틀 추가

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="imgContainer">
         <img src="./img/main.png" alt="술BTI" class="imgMain" />
       </div>
-      <button class="btnStart" onclick="js:begin()">
+      <button type="button" class="btnStart" title="start" onclick="js:begin()">
         <img src="./img/btn-start.png" alt="" class="btnStartImg" />
       </button>
     </section>
