ㅇ다시하기 버튼 생성

--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
           </div>
         </div>
       </div>
-      <button type="button">공유하기</button>
+      <button type="reset" title="reset" class="btnReset">
+        <img
+          src="./img/btn-reset.png"
+          alt="reset"
+          onclick="location.href='/'"
+        />
+      </button>
     </section>
     <script src="./js/data.js" charset="utf-8"></script>
     <script src="./js/start.js" charset="utf-8"></script>
