feat: 카카오 sdk 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>술 BTI</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init("API키");
+    </script>
   </head>
   <body>
     <section id="main">
