feat: 구글 애널리틱스 태그 추가

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <script>
       Kakao.init("API키");
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HNHKXP8Z8Q"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HNHKXP8Z8Q");
+    </script>
   </head>
   <body>
     <section id="main">
